attached_assets/Pasted-felix-raspberrypi-EVT-EVT-OFWSchwedt-1-Script-erstellen-cat-tmp-cleanup-subs-js-EOF--1762703429147_1762703429147.txt
felix@raspberrypi:~/EVT/EVT-OFWSchwedt $ # 1. Script erstellen:
cat > /tmp/cleanup_subs.js << 'EOF'
const { neon } = require('@neondatabase/serverless');
const sql = neon('postgresql://evt_user:Feuer2024Schwedt!@localhost:5432/evt_db');

async function cleanup() {
  try {
    console.log('Suche kaputte Push-Subscriptions...');
    
    const bad = await sql`SELECT id, endpoint FROM push_subscriptions WHERE endpoint LIKE '%localhost%' OR endpoint = '.' OR endpoint = ''`;
    console.log('Kaputte Subscriptions gefunden:', bad.length);
    console.log(JSON.stringify(bad, null, 2));
    
    const deleted = await sql`DELETE FROM push_subscriptions WHERE endpoint LIKE '%localhost%' OR endpoint = '.' OR endpoint = '' OR endpoint IS NULL`;
    console.log('\n✅ Gelöscht:', deleted.length, 'Subscriptions');
  } catch (err) {
    console.error('❌ Fehler:', err.message);
  }
  process.exit(0);
}

npm startnodeeu starten:s
node:internal/modules/cjs/loader:1210
  throw err;
  ^

Error: Cannot find module '@neondatabase/serverless'
Require stack:
- /tmp/cleanup_subs.js
    at Module._resolveFilename (node:internal/modules/cjs/loader:1207:15)
    at Module._load (node:internal/modules/cjs/loader:1038:27)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/tmp/cleanup_subs.js:1:18)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ '/tmp/cleanup_subs.js' ]
}

Node.js v20.19.5

> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js

⏰ Starting availability reminder scheduler
4:49:16 PM [express] serving on port 5173
ErrorEvent {
  [Symbol(kTarget)]: WebSocket {
    _events: [Object: null prototype] {
      error: [Function],
      message: [Function],
      close: [Function],
      open: [Function]
    },
    _eventsCount: 4,
    _maxListeners: undefined,
    _binaryType: 'arraybuffer',
    _closeCode: 1006,
    _closeFrameReceived: false,
    _closeFrameSent: false,
    _closeMessage: <Buffer >,
    _closeTimer: null,
    _errorEmitted: true,
    _extensions: {},
    _paused: false,
    _protocol: '',
    _readyState: 3,
    _receiver: null,
    _sender: null,
    _socket: null,
    _bufferedAmount: 0,
    _isServer: false,
    _redirects: 0,
    _autoPong: true,
    _url: 'wss://localhost/v2',
    _req: null,
    [Symbol(shapeMode)]: false,
    [Symbol(kCapture)]: false
  },
  [Symbol(kType)]: 'error',
  [Symbol(kError)]: AggregateError [ECONNREFUSED]: 
      at internalConnectMultiple (node:net:1122:18)
      at afterConnectMultiple (node:net:1689:7) {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  },
  [Symbol(kMessage)]: ''
}
Error in initial reminder check: ErrorEvent {
  [Symbol(kTarget)]: WebSocket {
    _events: [Object: null prototype] {
      error: [Function],
      message: [Function],
      close: [Function],
      open: [Function]
    },
    _eventsCount: 4,
    _maxListeners: undefined,
    _binaryType: 'arraybuffer',
    _closeCode: 1006,
    _closeFrameReceived: false,
    _closeFrameSent: false,
    _closeMessage: <Buffer >,
    _closeTimer: null,
    _errorEmitted: true,
    _extensions: {},
    _paused: false,
    _protocol: '',
    _readyState: 3,
    _receiver: null,
    _sender: null,
    _socket: null,
    _bufferedAmount: 0,
    _isServer: false,
    _redirects: 0,
    _autoPong: true,
    _url: 'wss://localhost/v2',
    _req: null,
    [Symbol(shapeMode)]: false,
    [Symbol(kCapture)]: false
  },
  [Symbol(kType)]: 'error',
  [Symbol(kError)]: AggregateError [ECONNREFUSED]: 
      at internalConnectMultiple (node:net:1122:18)
      at afterConnectMultiple (node:net:1689:7) {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  },
  [Symbol(kMessage)]: ''
}
